makeshift fix for resetting slides when data is updated in slider

--- a/client/src/styles/Imagedisplay.css
+++ b/client/src/styles/Imagedisplay.css
@@ -137,7 +137,7 @@
 .mySwiper{
   display: flex;
   height: 240px !important;
-  margin: 0 20px !important;
+  margin: 0 0px !important;
 }
 .mySwiper .button {
   position: absolute;
